Primer commit funcional

--- a/templates/pacientes/lista_pacientes.html
+++ b/templates/pacientes/lista_pacientes.html
@@ -1,4 +1,4 @@
-{% extends 'PhSport/templates/../../../AppConsultorio/templates/AppConsultorio/base.html' %}
+{% extends 'PhSport/base.html' %}
 
 {% block content %}
   <h1>Lista de pacientes</h1>
